[package]
name = "poly-host"
description = "Poly host-bridge daemon — serves /host/* routes for apps/web + reusable server lib"
version.workspace = true
edition.workspace = true
license.workspace = true

# Dual-surface crate: the binary is the standalone daemon (`cargo run -p
# poly-host`) used with `apps/web`. The library exposes the same Router so
# `apps/desktop-web` (Wry shell) can mount it on its own port without
# duplicating SQLite + handler code.
[lib]
name = "poly_host"
path = "src/lib.rs"

[[bin]]
name = "poly-host"
path = "src/main.rs"

[dependencies]
poly-host-bridge = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
    "fs",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }

[features]
# Enable the H.264 encode/decode endpoints via openh264-rs.
# Requires the `video` feature on poly-host-bridge (pulls in openh264).
# See docs/dev/video-codec-strategy.md and crates/host-bridge/Cargo.toml for
# the Cisco patent licensing tradeoff before enabling this in a distribution build.
video = ["poly-host-bridge/video"]

[lints]
workspace = true
