[package]
name = "poly-web"
description = "Poly web app — Dioxus fullstack with Axum"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "poly-web"
path = "src/main.rs"

[features]
# `dev-plugins` enables Discord and Microsoft Teams. They live in the repo
# (MIT, undistributed source is fine) and we use them for local dev, but they
# are NOT shipped in production binaries — both have TOS / app-store-review
# concerns that would block iOS/Play distribution. The release build script
# uses `--no-default-features --features production` to strip them.
# Default is the client-side profile so `dx build --platform web` (and
# rust-analyzer) compiles cleanly. `dx serve --platform web` builds the
# server half separately — see `Dioxus.toml [[features]]` for the
# client/server feature split.
default = ["dev-plugins", "web"]
dev-plugins = ["poly-core/discord", "poly-core/teams"]
production = []
# `web` brings in the WASM renderer; compiled when targeting wasm32.
# We DELIBERATELY do NOT enable `dioxus/fullstack` here — that would
# activate `dioxus-web/hydrate` so the client tries to hydrate against
# the SSR output. Hydration is the source of the textContent crash on
# boot: cfg(target_arch="wasm32") branches inside the App tree produce
# different shapes server vs client, the client's hydrate mapping
# desyncs, and the next text-edit opcode hits a missing node ID.
# Without fullstack, the client renders fresh; the server's empty
# `#poly-app-shell` (see App() cfg(not(wasm32))) is replaced cleanly.
web = ["dioxus/web"]
# `server` pulls in the Dioxus fullstack server runtime so `dx serve
# --platform web` builds this binary as a native axum server. The
# server binary serves the WASM bundle AND mounts `/host/*` on the
# same port (3000). One process, one port, no separate daemon.
server = ["dioxus/fullstack", "dioxus/server", "dep:axum", "dep:tokio", "dep:poly-host", "dep:dioxus-cli-config", "dep:anyhow"]

[dependencies]
poly-core = { workspace = true, features = [
    "demo",
    "server",
    "stoat",
    "lemmy",
    "hackernews",
    "matrix",
    "github",
    "forgejo",
    # poly-web routes storage through the host bridge so every platform
    # writes to the same SQLite file. In `dx serve --platform web`
    # fullstack mode, the `/host/*` routes are served by this binary
    # itself (see `server` feature). In a plain browser, the bridge
    # client falls back to `fetch` and talks to whichever poly shell
    # is currently running.
    "storage-host-bridge",
] }
dioxus = { workspace = true }
tracing = { workspace = true }

# Native-only deps used by the fullstack server build.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "macros", "signal", "net"] }
poly-host = { workspace = true, optional = true }
dioxus-cli-config = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

# getrandom 0.4 (pulled by rand 0.10 → poly-demo) needs wasm_js on WASM targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom04-wasm = { workspace = true }
web-sys = { workspace = true }
# apps/web runs in a real browser — no native shell, no /host bridge.
# Enabling `web-direct` makes HttpClient::new() fall back to browser fetch
# instead of trying to proxy through the unreachable bridge endpoint.
poly-host-bridge = { workspace = true, features = ["web-direct"] }

[lints]
workspace = true
