[package]
name = "poly-client"
description = "Shared messenger client trait and types for Poly"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
# uuid removed: Account.id uses String (backends format UUIDs as strings; no uuid dep needed here)
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
