[package]
name = "poly-client"
description = "Shared messenger client trait and types for Poly"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
poly-server = { workspace = true }
poly-server-client = { path = "../server-client", features = ["native"] }
reqwest = { workspace = true }
axum = { workspace = true, features = ["ws", "macros", "multipart"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tempfile = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
serde_json = { workspace = true }

[lints]
workspace = true
