[package]
name = "poly-demo"
description = "Demo/mock messenger client for Poly UI testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
poly-client = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
# uuid removed: ID generation uses rand (already a dep), avoiding getrandom 0.2 on WASM
rand = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
