[package]
name = "poly-discord"
description = "Discord messenger client for Poly — builds as native lib or WASM plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:base64",
    "dep:dioxus",
    "dep:async-trait",
    "dep:futures",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:poly-host-bridge",
    "dep:chrono",
    "dep:uuid",
    "dep:thiserror",
    "dep:tracing",
    "dep:twilight-model",
]
# Opt-in gateway (WebSocket) support — requires `tokio/net` which pulls in
# `mio`, which doesn't compile for `wasm32-unknown-unknown`. Anyone who
# builds poly-discord for WASM must NOT enable this feature. poly-core's
# `discord` feature deliberately stops at `native` so the unified app
# bundle stays WASM-clean; the gateway path is only relevant on native /
# test targets where `poly-chat-mcp` or integration tests live.
gateway = ["native", "dep:tokio-tungstenite", "dep:tokio-stream"]
# Voice transport — Discord voice gateway + RTP + Opus encode/decode.
# NATIVE ONLY. WASM builds MUST NOT enable this feature — audiopus links
# against libopus FFI which is not available on wasm32-unknown-unknown.
# Requires `gateway` for the main WS (used to send op 4 Voice State Update
# and receive VOICE_SERVER_UPDATE). Phase B of plan-voice-video-calls.
voice = [
    "gateway",
    "dep:audiopus",
    "dep:discortp",
    "dep:byteorder",
    "dep:chacha20poly1305",
    "dep:poly-audio-backend",
    "dep:poly-video-backend",
    "poly-host-bridge/video",
]
# Voice bridge — WASM-safe transport via generic host-bridge primitives.
# Compiles on wasm32-unknown-unknown. Implements the full Discord voice protocol
# (WS handshake, RTP framing, AEAD) in this plugin; routes over:
#   /host/udp/*         (UdpClient)
#   /host/codec/opus/*  (OpusClient)
#   /host/aead/*        (AeadClient)
#
# Mutually exclusive with `voice` by dep tree: `voice` pulls in audiopus/
# tungstenite which do not compile on wasm32.
#
# poly-host-bridge itself (no feature flags) exposes the typed clients and
# VoiceEvent SSE type on all targets.
voice-bridge = [
    "dep:poly-audio-backend",
    "dep:poly-video-backend",
    "dep:thiserror",
    "dep:tokio",
    "dep:futures",
    "dep:base64",
    "dep:serde_json",
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:wasm-bindgen-futures",
    "dep:poly-host-bridge",
]
# Gateway bridge — WASM-safe Discord main gateway WebSocket.
# Compiles on wasm32-unknown-unknown. Connects to wss://gateway.discord.gg,
# sends op 2 IDENTIFY, receives VOICE_STATE_UPDATE + VOICE_SERVER_UPDATE, and
# stashes voice credentials so that join_voice_channel_transport can pass real
# endpoint/token/session_id to DiscordVoiceBridgeClient.
#
# Must NOT imply `native` or `gateway` — both require tokio-tungstenite/mio
# which do not compile on wasm32-unknown-unknown.
gateway-bridge = [
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:serde_json",
    "dep:serde",
    "dep:futures",
    "dep:tokio",
    "dep:tracing",
]
# Phase F.3 — synthetic canary test feature.
# Enables the `tests/canary.rs` test that runs a live session against a real
# throwaway Discord account and asserts no 429s / 401s occur.
# Run manually (never in regular CI): see tests/canary.rs for the env-var protocol.
discord-canary = ["native", "gateway"]

[dependencies]
poly-ui-macros = { workspace = true }
poly-client = { workspace = true }
poly-host-bridge = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }

# Native-only dependencies (feature-gated)
base64 = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["js"] }
futures = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
twilight-model = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Voice transport — native only (feature = "voice"). B.1.
audiopus = { workspace = true, optional = true }
discortp = { workspace = true, optional = true }
# web-time: wasm32-safe Instant for anti-ban guardrails.
web-time = { workspace = true }
chacha20poly1305 = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
poly-audio-backend = { workspace = true, optional = true }

# Video transport — gated by voice feature (Phase E of plan-voice-video-calls.md).
poly-video-backend = { workspace = true, optional = true }

# Voice-bridge / gateway-bridge — WASM-safe deps.
# gloo-net provides browser WebSocket for the Discord voice WS handshake on wasm32.
gloo-net = { workspace = true, optional = true, features = ["websocket"] }
# gateway-bridge — gloo-timers provides browser setTimeout as a Rust Future on wasm32.
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
# gateway-bridge — needed to spawn async tasks on wasm32 (wasm_bindgen_futures::spawn_local).
wasm-bindgen-futures = { workspace = true, optional = true }
# gateway-bridge — js_sys::Promise for future interop.
js-sys = { workspace = true, optional = true }

# WASM plugin guest bindings (WASI targets only)
[target.'cfg(target_os = "wasi")'.dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Browser-only deps for the wasm audio capture (Phase X.2) + playback (Phase X.3)
# loops. Gated behind `voice-bridge` via cfg(target_arch = "wasm32") inside
# audio_capture.rs / audio_playback.rs. Adds web-sys features needed for
# getUserMedia + MediaStreamTrackProcessor + AudioContext + AudioBufferSourceNode,
# plus js-sys / wasm-bindgen-futures / wasm-bindgen.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = [
    # X.2 — capture (getUserMedia → MSTP → AudioData)
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "AudioData",
    "AudioDataCopyToOptions",
    # X.3 — playback (per-SSRC AudioContext + scheduled AudioBufferSourceNode)
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "AudioBuffer",
    "AudioBufferOptions",
    "AudioBufferSourceNode",
    "AudioBufferSourceOptions",
    "AudioNode",
    "AudioDestinationNode",
    "AudioScheduledSourceNode",
] }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
[dev-dependencies]
poly-test-discord = { path = "../../servers/test-discord" }
poly-test-common = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
# Integration tests talk to the test server directly (native), so they keep
# using reqwest as a dev-dependency.
reqwest = { workspace = true }

[[test]]
name = "back_and_forth"
path = "tests/back_and_forth.rs"

[[test]]
name = "version_override"
path = "tests/version_override.rs"

[[test]]
name = "super_properties_consistency"
path = "tests/super_properties_consistency.rs"

[[test]]
name = "video_smoke"
path = "tests/video_smoke.rs"
required-features = ["voice"]

# Phase X.0 F.7 — voice bridge handshake foundation test.
# Needs native compilation of `voice_bridge` (so `voice-bridge` feature) plus
# `gateway` for tokio-tungstenite (used to drive the mock WS directly).
[[test]]
name = "voice_bridge_handshake"
path = "tests/voice_bridge_handshake.rs"
required-features = ["voice-bridge", "gateway"]

# Phase F.3 — canary test (synthetic live session, run manually).
[[test]]
name = "canary"
path = "tests/canary.rs"

[lints]
workspace = true
