[package]
name = "poly-forgejo"
description = "Forgejo / Gitea / Codeberg client for Poly — forge backend with issues, PRs, and source explorer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:dioxus",
    "dep:async-trait",
    "dep:futures",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:chrono",
    "dep:thiserror",
    "dep:tracing",
    "dep:poly-host-bridge",
]

[dependencies]
poly-ui-macros = { workspace = true }
poly-client = { workspace = true }
poly-common-forge = { workspace = true }
poly-host-bridge = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }

# Native-only dependencies (feature-gated)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# WASM plugin guest bindings (WASI targets only)
[target.'cfg(target_os = "wasi")'.dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
poly-test-forgejo = { path = "../../servers/test-forgejo" }
axum = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }

[[test]]
name = "back_and_forth"
path = "tests/back_and_forth.rs"

[[test]]
name = "version_override"
path = "tests/version_override.rs"

[lints]
workspace = true
