[package]
name = "poly-github"
description = "GitHub / GitHub Enterprise client for Poly — uses the gh CLI as transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
poly-ui-macros = { workspace = true }
poly-client = { workspace = true }
poly-host-bridge = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# Always-on tokio (workspace default = rt/macros/sync/time/io-util — WASM safe).
# The native target adds `process` + `rt-multi-thread` for the subprocess path.
tokio = { workspace = true }

# Native: subprocess support for the gh CLI.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["process", "rt-multi-thread"] }

[dev-dependencies]
poly-test-github = { path = "../../servers/test-github" }
axum = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }

[[test]]
name = "back_and_forth"
path = "tests/back_and_forth.rs"

[[test]]
name = "version_override"
path = "tests/version_override.rs"

[lints]
workspace = true
