[package]
name = "poly-matrix"
description = "Matrix messenger client for Poly (wraps matrix-sdk) — builds as native lib or WASM plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:async-trait",
    "dep:futures",
    "dep:tokio",
    "dep:serde",
    "dep:chrono",
    "dep:uuid",
    "dep:thiserror",
    "dep:tracing",
]

[dependencies]
poly-client = { workspace = true }

# Native-only dependencies (feature-gated)
# matrix-sdk = "0.16"  # TODO(phase-3.2): Enable when implementing Matrix client
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# WASM plugin guest bindings (WASI targets only)
[target.'cfg(target_os = "wasi")'.dependencies]
wit-bindgen = { workspace = true }

[lints]
workspace = true
