[package]
name = "poly-reddit"
description = "Reddit client for Poly — HTML-scraping backend against old.reddit.com (dev-plugins gated)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:dioxus",
    "dep:async-trait",
    "dep:futures",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:chrono",
    "dep:uuid",
    "dep:thiserror",
    "dep:tracing",
    "dep:reqwest",
    "dep:scraper",
    "dep:regex",
    "dep:poly-host-bridge",
]

[dependencies]
poly-ui-macros = { workspace = true }
poly-client = { workspace = true }
poly-host-bridge = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }

# Native-only dependencies (feature-gated)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["js"] }
futures = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["cookies"] }
scraper = { version = "0.20", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
